--- a/styles.scss
+++ b/styles.scss
@@ -5,8 +5,8 @@
 
 
 // NOTE: import utilities and base partials here:
-
-
+@import 'utilities';
+@import 'base';
 
 // import components partials
 @import 'components';
