--- a/scss/base/_index.scss
+++ b/scss/base/_index.scss
@@ -1,6 +1,4 @@
-// ======================================
-//  Partial Imports
-// ======================================
+// Import partials
 
-@import 'base';
 @import 'normalize';
+@import 'base';
