--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -1,12 +1,4 @@
-// **********************************************
-// _grid.scss
-// styles related to the grid system and
-// main container.
-// major grid styles have been added here for you
-// but additional styling may be needed
-// **********************************************
-
-
+/* grid */
 // grid base class
 .grid {
 
