--- a/scss/utilities/_index.scss
+++ b/scss/utilities/_index.scss
@@ -1,7 +1,6 @@
-// ======================================
-//  Partial Imports
-// ======================================
+// Import partials
 
 @import 'variables';
+@import 'functions';
 @import 'mixins';
 @import 'placeholders';
