--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,22 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/* variables */
+/* functions */
+/* mixins */
+@media screen and (min-width: 768px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+}
+.container {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  text-align: center;
+}
+
+/* placeholders */
+/* normalize */
 /* Document
    ========================================================================== */
 /**
@@ -337,6 +355,25 @@ template {
   display: none;
 }
 
+/* base */
+* {
+  box-sizing: border-box;
+}
+
+.nav__item {
+  list-style-type: none;
+}
+
+p {
+  text-align: left;
+}
+
+a {
+  text-decoration: none;
+}
+
+/* typography */
+/* grid */
 .grid__row {
   padding: 1em 10px;
   display: flex;
@@ -472,6 +509,44 @@ template {
   [class^=grid__col] + [class^=grid__col] {
     margin-left: 10px;
   }
+}
+
+/* navigation */
+.nav {
+  padding-left: 0;
+}
+.nav__item a {
+  display: block;
+  padding: 15px 20px;
+}
+.nav__item a:hover {
+  background-color: #58e1c1;
+  border-radius: 5px;
+  color: #fff;
+}
+
+/* forms */
+/* images */
+.img--frame {
+  width: 100%;
+  border-width: 2px;
+}
+
+/* buttons */
+.btn--info.theme__colors {
+  background-color: #927bc1;
+}
+.btn--warning.theme__colors {
+  background-color: #fd7856;
+}
+.btn--error.theme__colors {
+  background-color: #e4757a;
+}
+.btn--success.theme__colors {
+  background-color: #63cc82;
+}
+.btn--default.theme__colors {
+  background-color: #51ddfc;
 }
 
 /*# sourceMappingURL=styles.css.map */
