--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -1,4 +1,17 @@
+/* mixins */
 // Media Queries
-
+@media screen and (min-width: 768px) {
+	.container {
+	display: flex;
+	flex-direction: column;
+	}
+}
 
 // Flexbox Settings
+.container {
+	display: block;
+	margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    text-align: center; 
+}
