Add file changes

--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -2,7 +2,7 @@
 .btn-- {
 	@each $key, $color in $button-colors {
 		&#{$key}.theme__colors {
-			background-color: map-get($button-colors, $key);
+			background-color: $color;
 		}
 	}
 }
