--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -8,6 +8,10 @@ $semibold: 500;
 $bold: 700;
 
 // Breakpoints
+$breakpoints: (
+	'mobile' : 480px,
+	'desktop': 1400px
+);
 
 // Colors
 $button-colors: (
