--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Nunito+Sans");
 /* variables */
-/* functions */
-/* mixins */
-.container {
-  display: flex;
-  flex-direction: column;
-  margin-left: auto;
-  margin-right: auto;
-  width: 80%;
-  text-align: center;
-}
-
-/* placeholders */
 /* normalize */
 /* Document
    ========================================================================== */
@@ -350,169 +339,35 @@ template {
   display: none;
 }
 
-/* base */
 * {
   box-sizing: border-box;
 }
 
-.nav__item {
-  list-style-type: none;
-}
-
-p {
-  text-align: left;
-}
-
-a {
-  text-decoration: none;
-}
-
-/* typography */
-/* grid */
-.grid__row {
-  padding: 1em 10px;
+.container {
+  font-family: "Nunito", sans-serif;
+  color: #888;
   display: flex;
   flex-direction: column;
-}
-@media (min-width: 768px) {
-  .grid__row {
-    flex-direction: row;
-  }
-}
-.grid__col--1 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
-@media (min-width: 768px) {
-  .grid__col--1 {
-    margin-top: 0;
-    flex-basis: 8.3333333333%;
-  }
-}
-.grid__col--2 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
-@media (min-width: 768px) {
-  .grid__col--2 {
-    margin-top: 0;
-    flex-basis: 16.6666666667%;
-  }
-}
-.grid__col--3 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
-@media (min-width: 768px) {
-  .grid__col--3 {
-    margin-top: 0;
-    flex-basis: 25%;
-  }
-}
-.grid__col--4 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
-@media (min-width: 768px) {
-  .grid__col--4 {
-    margin-top: 0;
-    flex-basis: 33.3333333333%;
-  }
-}
-.grid__col--5 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
-@media (min-width: 768px) {
-  .grid__col--5 {
-    margin-top: 0;
-    flex-basis: 41.6666666667%;
-  }
-}
-.grid__col--6 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
-@media (min-width: 768px) {
-  .grid__col--6 {
-    margin-top: 0;
-    flex-basis: 50%;
-  }
-}
-.grid__col--7 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
-@media (min-width: 768px) {
-  .grid__col--7 {
-    margin-top: 0;
-    flex-basis: 58.3333333333%;
-  }
-}
-.grid__col--8 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
-@media (min-width: 768px) {
-  .grid__col--8 {
-    margin-top: 0;
-    flex-basis: 66.6666666667%;
-  }
-}
-.grid__col--9 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
-@media (min-width: 768px) {
-  .grid__col--9 {
-    margin-top: 0;
-    flex-basis: 75%;
-  }
-}
-.grid__col--10 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
-@media (min-width: 768px) {
-  .grid__col--10 {
-    margin-top: 0;
-    flex-basis: 83.3333333333%;
-  }
-}
-.grid__col--11 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
-@media (min-width: 768px) {
-  .grid__col--11 {
-    margin-top: 0;
-    flex-basis: 91.6666666667%;
-  }
-}
-.grid__col--12 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
-@media (min-width: 768px) {
-  .grid__col--12 {
-    margin-top: 0;
-    flex-basis: 100%;
-  }
+  width: 80%;
+  margin: 30px auto;
+  text-align: center;
 }
 
-@media (min-width: 768px) {
-  [class^=grid__col] + [class^=grid__col] {
-    margin-left: 10px;
-  }
+.card {
+  text-align: left;
+  line-height: 25px;
+  margin-top: 60px;
 }
 
-/* navigation */
 .nav {
   padding-left: 0;
+  list-style-type: none;
 }
 .nav__item a {
   display: block;
   padding: 15px 20px;
+  color: #000;
+  font-weight: 300;
 }
 .nav__item a:hover {
   background-color: #58e1c1;
@@ -520,28 +375,95 @@ a {
   color: #fff;
 }
 
-/* forms */
-/* images */
-.img--frame {
-  width: 100%;
-  border-width: 2px;
+p {
+  color: #888;
+  font-size: 1.05em;
+}
+h1 + p {
+  margin-top: 30px;
 }
 
-/* buttons */
+.headline--secondary {
+  font-weight: 300;
+}
+.headline--primary {
+  color: #58e1c1;
+  margin-left: 20px;
+}
+
+.blockquote {
+  margin-left: 20px;
+  margin-right: 0;
+  padding-left: 20px;
+  font-style: italic;
+  font-size: 1.7em;
+  font-weight: 300;
+  line-height: 33px;
+  border-left: 10px solid #58e1c1;
+  border-radius: 2.5%;
+}
+
+a {
+  text-decoration: none;
+}
+
+.link {
+  color: #51ddfc;
+}
+
+.img--logo {
+  margin: 25px 0;
+}
+
 .btn--info.theme__colors {
   background-color: #927bc1;
+  display: block;
+  width: 100%;
+  padding: 10px 20px;
+  margin: 20px 0;
+  border-style: none;
+  border-radius: 8px;
+  text-align: center;
 }
 .btn--warning.theme__colors {
   background-color: #fd7856;
+  display: block;
+  width: 100%;
+  padding: 10px 20px;
+  margin: 20px 0;
+  border-style: none;
+  border-radius: 8px;
+  text-align: center;
 }
 .btn--error.theme__colors {
   background-color: #e4757a;
+  display: block;
+  width: 100%;
+  padding: 10px 20px;
+  margin: 20px 0;
+  border-style: none;
+  border-radius: 8px;
+  text-align: center;
 }
 .btn--success.theme__colors {
   background-color: #63cc82;
+  display: block;
+  width: 100%;
+  padding: 10px 20px;
+  margin: 20px 0;
+  border-style: none;
+  border-radius: 8px;
+  text-align: center;
 }
 .btn--default.theme__colors {
   background-color: #51ddfc;
+  display: block;
+  width: 100%;
+  padding: 10px 20px;
+  margin: 20px 0;
+  border-style: none;
+  border-radius: 8px;
+  text-align: center;
 }
 
 /*# sourceMappingURL=styles.css.map */
