--- a/css/styles.css
+++ b/css/styles.css
@@ -356,7 +356,10 @@ template {
 .card {
   text-align: left;
   line-height: 25px;
-  margin-top: 60px;
+}
+
+.grid__row {
+  margin: 30px 0;
 }
 
 .nav {
@@ -379,8 +382,10 @@ p {
   color: #888;
   font-size: 1.05em;
 }
-h1 + p {
-  margin-top: 30px;
+
+h4 {
+  font-weight: 300;
+  text-align: left;
 }
 
 .headline--secondary {
@@ -411,10 +416,6 @@ a {
   color: #51ddfc;
 }
 
-.img--logo {
-  margin: 25px 0;
-}
-
 .btn--info.theme__colors {
   background-color: #927bc1;
   display: block;
@@ -424,6 +425,9 @@ a {
   border-style: none;
   border-radius: 8px;
   text-align: center;
+  text-transform: uppercase;
+  color: white;
+  font-weight: 700;
 }
 .btn--warning.theme__colors {
   background-color: #fd7856;
@@ -434,6 +438,9 @@ a {
   border-style: none;
   border-radius: 8px;
   text-align: center;
+  text-transform: uppercase;
+  color: white;
+  font-weight: 700;
 }
 .btn--error.theme__colors {
   background-color: #e4757a;
@@ -444,6 +451,9 @@ a {
   border-style: none;
   border-radius: 8px;
   text-align: center;
+  text-transform: uppercase;
+  color: white;
+  font-weight: 700;
 }
 .btn--success.theme__colors {
   background-color: #63cc82;
@@ -454,6 +464,9 @@ a {
   border-style: none;
   border-radius: 8px;
   text-align: center;
+  text-transform: uppercase;
+  color: white;
+  font-weight: 700;
 }
 .btn--default.theme__colors {
   background-color: #51ddfc;
@@ -464,6 +477,9 @@ a {
   border-style: none;
   border-radius: 8px;
   text-align: center;
+  text-transform: uppercase;
+  color: white;
+  font-weight: 700;
 }
 
 /*# sourceMappingURL=styles.css.map */
