--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -25,7 +25,10 @@
 .card {
 	text-align: left;
 	line-height: 25px;
-	margin-top: 60px;
+}
+
+.grid__row {
+	margin: 30px 0;
 }
 
 // Navigation
@@ -49,11 +52,14 @@
 p {
 	color: map-get($text-colors, primary);
 	font-size: 1.05em;
-	h1 + & {
-		margin-top: 30px;
-	}
-
 }
+
+h4 {
+	font-weight: $light;
+	text-align: left;
+}
+
+.btn {}
 
 .headline {
 	&--secondary {
@@ -88,9 +94,7 @@ a {
 
 // Images
 .img {
-	&--logo {
-		margin: 25px 0;
-	}
+
 }
 
 
@@ -106,6 +110,9 @@ a {
 			border-style: none;
 			border-radius: 8px;
 			text-align: center;
+			text-transform: uppercase;
+			color: white;
+			font-weight: $bold;
 		}
 	}
 }
