--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -116,3 +116,23 @@ a {
 		}
 	}
 }
+
+// Grid
+.grid {
+	@each $key, $color in $grid-colors {
+		&__col--#{$key}.theme__colors {
+			background-color: $color;
+			display: block;
+			width: 100%;
+			padding: 10px 20px;
+			border-style: none;
+			border-radius: 8px;
+			text-align: left;
+			color: map-get($text-colors, primary);
+			font-weight: $normal;
+			& + & {
+			margin-top: 10px;
+			}
+		}
+	}
+}
