--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,20 +1,35 @@
 /* base */
-// Universal selector
-* {
+// Base
+*{
 	box-sizing: border-box;
 }
+
+// Flexbox
+.container {
+	font-size: $font-size;
+	line-height: ($line/$font-size);
+	font-family: $font-family;
+	color: map-get($text-colors, primary);
+	display: flex;
+	flex-direction: column;
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.card {
+	text-align: left;
+	line-height: 25px;
+}
+
 
 // List elements
 .nav__item {
 	list-style-type: none;
 }
 
-// Paragraphs
-p {
-	text-align: left;
-}
+// Links
 
-// Anchor tags
-a {
-	text-decoration: none;
+.link {
+	color: map-get($text-colors, link);
 }
