--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -1,1 +1,23 @@
 /* typography */
+.headline {
+	&--secondary {
+		font-weight: $light;
+	}
+	&--primary {
+		font-weight: $bold;
+		color: map-get($text-colors, important);
+		margin-left: 20px;
+	}
+}
+
+.blockquote {
+	margin-left: 20px;
+	margin-right: 0;
+	padding-left: 20px;
+	font-style: italic;
+	font-size: 1.7em;
+	font-weight: $light;
+	line-height: 33px;
+	border-left: 10px solid map-get($text-colors, headline);
+	border-radius: 2.5%;
+}
