--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,138 +1,5 @@
 // Import partial subfolders
-@import url('https://fonts.googleapis.com/css?family=Nunito+Sans');
 @import 'utilities/variables';
 @import 'base/normalize';
-// @import 'base';
-// @import 'components';
-
-
-// Base
-*{
-	box-sizing: border-box;
-}
-
-// Flexbox
-.container {
-	font-family: 'Nunito', sans-serif;
-	color: map-get($text-colors, primary);
-	display: flex;
-	flex-direction: column;
-	width: 80%;
-	margin: 30px auto;
-	text-align: center;
-}
-
-.card {
-	text-align: left;
-	line-height: 25px;
-}
-
-.grid__row {
-	margin: 30px 0;
-}
-
-// Navigation
-.nav {
-	padding-left: 0;
-	list-style-type: none;
-	&__item a {
-		display: block;
-		padding: 15px 20px;
-		color: #000;
-		font-weight: $light;
-		&:hover {
-			background-color: #58e1c1;
-			border-radius: 5px;
-			color: #fff;
-		}
-	}
-}
-
-// Typography
-p {
-	color: map-get($text-colors, primary);
-	font-size: 1.05em;
-}
-
-h4 {
-	font-weight: $light;
-	text-align: left;
-}
-
-.btn {}
-
-.headline {
-	&--secondary {
-		font-weight: $light;
-	}
-	&--primary {
-		color: map-get($text-colors, headline);
-		margin-left: 20px;
-	}
-}
-
-.blockquote {
-	margin-left: 20px;
-	margin-right: 0;
-	padding-left: 20px;
-	font-style: italic;
-	font-size: 1.7em;
-	font-weight: $light;
-	line-height: 33px;
-	border-left: 10px solid map-get($text-colors, headline);
-	border-radius: 2.5%;
-}
-
-// Links
-a {
-	text-decoration: none;
-}
-
-.link {
-	color: map-get($text-colors, link);
-}
-
-// Images
-.img {
-
-}
-
-
-// Butons
-.btn-- {
-	@each $key, $color in $button-colors {
-		&#{$key}.theme__colors {
-			background-color: $color;
-			display: block;
-			width: 100%;
-			padding: 10px 20px;
-			margin: 20px 0;
-			border-style: none;
-			border-radius: 8px;
-			text-align: center;
-			text-transform: uppercase;
-			color: white;
-			font-weight: $bold;
-		}
-	}
-}
-
-// Grid
-.grid {
-	@each $key, $color in $grid-colors {
-		&__col--#{$key}.theme__colors {
-			background-color: $color;
-			display: block;
-			width: 100%;
-			padding: 10px 20px;
-			border-style: none;
-			border-radius: 8px;
-			text-align: left;
-			color: map-get($text-colors, primary);
-			font-weight: $normal;
-			& + & {
-			margin-top: 10px;
-			}
-		}
-	}
-}
+@import 'base';
+@import 'components';
