--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -16,6 +16,7 @@
 
   // .grid__col
   &__col {
+    @include bg-colors($grid-colors);
 
     // create grid columns dynamically
     // loop through each column size
