--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,4 @@
 // Import partial subfolders
-@import 'utilities/variables';
-@import 'base/normalize';
+@import 'utilities';
 @import 'base';
 @import 'components';
