--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -9,7 +9,7 @@ $normal    : 400;
 $bold      : 700;
 $ultra-bold: 900;
 
-// Text
+// Base Text
 $font-size: 16px;
 $line     : 24px;
 
@@ -17,27 +17,47 @@ $line     : 24px;
 $break-desktop: 769px;
 
 // Colors
-$button-colors: (
-    info   : #927bc1,
-    warning: #fd7856,
-    error  : #e4757a,
-    success: #63cc82,
-    default: #51ddfc
-  );
+// Palette
+$purple-majesty : #927bc1;
+$coral          : #fd7856;
+$sunglo         : #e4757a;
+$emerald        : #63cc82;
+$malibu         : #51ddfc;
+$french-lilac   : #deb2ee;
+$anakiwa        : #7ee6fd;
+$vista-blue     : #88d9a0;
+$fountain-blue  : #4da2bb;
+$sea-pink       : #ec9fa3;
+$vivid-tangerine: #fd9f85;
+$riptide        : #80e8d1;
+$viking         : #58e1c1;
 
-$text-colors: (
-    contrast : #fff,
-	overall  : #888,
-	important: #58e1c1,
-	link     : #51ddfc,
+// Basic ones
+$white         : #fff;
+$gray          : #888;
+
+// Groups
+$button-colors: (
+    info   : $purple-majesty,
+    warning: $coral,
+    error  : $sunglo,
+    success: $emerald,
+    default: $malibu
 );
 
 $grid-colors: (
-    3 : #deb2ee,
-    4 : #7ee6fd,
-    5 : #88d9a0,
-    6 : #4da2bb,
-    7 : #ec9fa3,
-    8 : #fd9f85,
-    12: #80e8d1 
+    3 : $french-lilac,
+    4 : $anakiwa,
+    5 : $vista-blue,
+    6 : $fountain-blue,
+    7 : $sea-pink,
+    8 : $vivid-tangerine,
+    12: $riptide 
 );
+
+$text-colors: (
+    contrast : $white,
+    overall  : $gray,
+    important: $viking,
+    link     : $malibu
+)
