Add file changes

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -7,25 +7,27 @@
 // Flexbox
 .container {
 	@include center-content;
-	font-size: $font-size;
-	line-height: ($line/$font-size);
+	padding: 20px;
+	font-size: $font;
+	line-height: ($line / $font);
 	font-family: $font-family;
 	color: clr(overall);
+	text-align: center;
 }
 
 .card {
+	@include center-card;
 	text-align: left;
 	line-height: 25px;
 }
 
-
 // List elements
-.nav__item {
-	list-style-type: none;
-}
+
 
 // Links
 
 .link {
 	color: clr(link);
+	text-decoration: none;
+	font-weight: $bold;
 }
