--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -10,11 +10,12 @@ $bold      : 700;
 $ultra-bold: 900;
 
 // Base Text
-$font-size: 16px;
-$line     : 24px;
+$font  : 16px;
+$line  : 24px;
+$letter: -1px;
 
 // Breakpoints
-$break-desktop: 769px;
+$break-med: 768px;
 
 // Colors
 // Palette
