--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,27 @@
 /* mixins */
 @import url(url("https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700,900"));
 /* placeholders */
+@media (min-width: 768px) {
+  .nav {
+    display: inline-block;
+  }
+}
+
+.nav__item a {
+  font-weight: 300;
+  text-align: center;
+  font-size: 1.125em;
+  display: block;
+  padding: 15px 20px;
+  color: #888;
+}
+
+.nav__item a:hover {
+  color: #fff;
+  background-color: #58e1c1;
+  border-radius: 5px;
+}
+
 /* normalize */
 /* Document
    ========================================================================== */
@@ -348,26 +369,29 @@ template {
 }
 
 .container {
-  width: 90%;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
+  padding: 20px;
   font-size: 16px;
   line-height: 1.5;
   font-family: "Nunito", sans-serif;
   color: #888;
+  text-align: center;
 }
 
 .card {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
   text-align: left;
   line-height: 25px;
 }
 
-.nav__item {
-  list-style-type: none;
-}
-
 .link {
   color: #51ddfc;
+  text-decoration: none;
+  font-weight: 700;
 }
 
 /* typography */
@@ -376,6 +400,7 @@ template {
 }
 .headline--primary {
   font-weight: 700;
+  letter-spacing: -1px;
   font-size: 2em;
   line-height: 1.125;
   margin: 0 0 1.25em 0.625em;
@@ -383,20 +408,28 @@ template {
 }
 
 .blockquote {
-  margin-left: 20px;
-  margin-right: 0;
-  padding-left: 20px;
+  margin: 20px 40px;
+  padding: 0 20px;
   font-style: italic;
-  font-size: 1.7em;
+  font-size: 1.5em;
   font-weight: 300;
   line-height: 33px;
+  letter-spacing: -1px;
   border-left: 10px solid #58e1c1;
   border-radius: 2.5%;
 }
 
 /* grid */
+.grid, .grid__col--12, .grid__col--11, .grid__col--10, .grid__col--9, .grid__col--8, .grid__col--7, .grid__col--6, .grid__col--5, .grid__col--4, .grid__col--3, .grid__col--2, .grid__col--1 {
+  margin-top: 10px;
+  flex-basis: 100%;
+}
+@media (min-width: 768px) {
+  .grid, .grid__col--12, .grid__col--11, .grid__col--10, .grid__col--9, .grid__col--8, .grid__col--7, .grid__col--6, .grid__col--5, .grid__col--4, .grid__col--3, .grid__col--2, .grid__col--1 {
+    margin-top: 0;
+  }
+}
 .grid__row {
-  padding: 1em 10px;
   display: flex;
   flex-direction: column;
 }
@@ -407,142 +440,124 @@ template {
 }
 .grid__col--3.theme__colors {
   background-color: #deb2ee;
+  display: block;
+  padding: 10px 20px;
+  border-style: none;
+  border-radius: 5px;
+  font-weight: 700;
+  padding-left: 10px;
 }
 .grid__col--4.theme__colors {
   background-color: #7ee6fd;
+  display: block;
+  padding: 10px 20px;
+  border-style: none;
+  border-radius: 5px;
+  font-weight: 700;
+  padding-left: 10px;
 }
 .grid__col--5.theme__colors {
   background-color: #88d9a0;
+  display: block;
+  padding: 10px 20px;
+  border-style: none;
+  border-radius: 5px;
+  font-weight: 700;
+  padding-left: 10px;
 }
 .grid__col--6.theme__colors {
   background-color: #4da2bb;
+  display: block;
+  padding: 10px 20px;
+  border-style: none;
+  border-radius: 5px;
+  font-weight: 700;
+  padding-left: 10px;
 }
 .grid__col--7.theme__colors {
   background-color: #ec9fa3;
+  display: block;
+  padding: 10px 20px;
+  border-style: none;
+  border-radius: 5px;
+  font-weight: 700;
+  padding-left: 10px;
 }
 .grid__col--8.theme__colors {
   background-color: #fd9f85;
+  display: block;
+  padding: 10px 20px;
+  border-style: none;
+  border-radius: 5px;
+  font-weight: 700;
+  padding-left: 10px;
 }
 .grid__col--12.theme__colors {
   background-color: #80e8d1;
-}
-.grid__col--1 {
-  margin-top: 10px;
-  flex-basis: 100%;
+  display: block;
+  padding: 10px 20px;
+  border-style: none;
+  border-radius: 5px;
+  font-weight: 700;
+  padding-left: 10px;
 }
 @media (min-width: 768px) {
   .grid__col--1 {
-    margin-top: 0;
     flex-basis: 8.3333333333%;
   }
 }
-.grid__col--2 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
 @media (min-width: 768px) {
   .grid__col--2 {
-    margin-top: 0;
     flex-basis: 16.6666666667%;
   }
 }
-.grid__col--3 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
 @media (min-width: 768px) {
   .grid__col--3 {
-    margin-top: 0;
     flex-basis: 25%;
   }
 }
-.grid__col--4 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
 @media (min-width: 768px) {
   .grid__col--4 {
-    margin-top: 0;
     flex-basis: 33.3333333333%;
   }
 }
-.grid__col--5 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
 @media (min-width: 768px) {
   .grid__col--5 {
-    margin-top: 0;
     flex-basis: 41.6666666667%;
   }
 }
-.grid__col--6 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
 @media (min-width: 768px) {
   .grid__col--6 {
-    margin-top: 0;
     flex-basis: 50%;
   }
 }
-.grid__col--7 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
 @media (min-width: 768px) {
   .grid__col--7 {
-    margin-top: 0;
     flex-basis: 58.3333333333%;
   }
 }
-.grid__col--8 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
 @media (min-width: 768px) {
   .grid__col--8 {
-    margin-top: 0;
     flex-basis: 66.6666666667%;
   }
 }
-.grid__col--9 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
 @media (min-width: 768px) {
   .grid__col--9 {
-    margin-top: 0;
     flex-basis: 75%;
   }
 }
-.grid__col--10 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
 @media (min-width: 768px) {
   .grid__col--10 {
-    margin-top: 0;
     flex-basis: 83.3333333333%;
   }
 }
-.grid__col--11 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
 @media (min-width: 768px) {
   .grid__col--11 {
-    margin-top: 0;
     flex-basis: 91.6666666667%;
   }
 }
-.grid__col--12 {
-  margin-top: 10px;
-  flex-basis: 100%;
-}
 @media (min-width: 768px) {
   .grid__col--12 {
-    margin-top: 0;
     flex-basis: 100%;
   }
 }
@@ -558,17 +573,9 @@ template {
   padding-left: 0;
   list-style-type: none;
 }
-.nav__item {
-  padding: 15px 20px;
-  color: #000;
-  font-weight: 300;
+.nav__item a {
+  text-decoration: none;
 }
-.nav__item:hover {
-  background-color: #58e1c1;
-  border-radius: 5px;
-  color: #fff;
-}
-
 /* forms */
 /* images */
 .img--frame {
@@ -576,11 +583,6 @@ template {
 }
 
 /* buttons */
-.btn {
-  width: 90%;
-  margin-left: auto;
-  margin-right: auto;
-}
 .btn--info.theme__colors {
   background-color: #927bc1;
 }
@@ -595,6 +597,20 @@ template {
 }
 .btn--default.theme__colors {
   background-color: #51ddfc;
+}
+
+[class^=btn--] {
+  display: block;
+  padding: 10px 20px;
+  border-style: none;
+  border-radius: 5px;
+  font-weight: 700;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  color: #fff;
+  text-transform: uppercase;
+  margin: 20px 0;
 }
 
 /*# sourceMappingURL=styles.css.map */
