--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -5,6 +5,7 @@
 	}
 	&--primary {
 		font-weight: $bold;
+		letter-spacing: $letter;
 
 		// 32px is the default h1 size value 
 		// font-size is saved here for possible future design alterations
@@ -18,13 +19,13 @@
 }
 
 .blockquote {
-	margin-left: 20px;
-	margin-right: 0;
-	padding-left: 20px;
+	margin: 20px 40px;
+	padding: 0 20px;
 	font-style: italic;
-	font-size: 1.7em;
+	font-size: em(24px);
 	font-weight: $light;
 	line-height: 33px;
+	letter-spacing: $letter;
 	border-left: 10px solid clr(important);
 	border-radius: 2.5%;
 }
