--- a/scss/utilities/_functions.scss
+++ b/scss/utilities/_functions.scss
@@ -1,7 +1,7 @@
 /* functions */
 // Value Calculation
 //Pixel to Em
-@function em($target, $context: $font-size) {
+@function em($target, $context: $font) {
 	@return ($target / $context) * 1em;
 }
 
