--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -5,33 +5,33 @@
 }
 
 // Media Queries
-@media (min-width: 768px) {
-	
+@mixin mq($break) {
+	@if $break == 'medium' {
+		@media (min-width: $break-med) {
+			@content;
+		}
+	}
 }
 
 // Flexbox Settings
 @mixin center-content {
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+@mixin center-card {
 	width: 90%;
 	margin-left: auto;
 	margin-right: auto;
 }
 
-@mixin center-grid {
-	width: 95%;
-	margin-left: auto;
-	margin-right: auto;
-}
-
 // Buttons
-@mixin btn {
+@mixin brdr {
 	display: block;
-	padding: 15px 20px;
+	padding: 10px 20px;
 	border-style: none;
 	border-radius: 5px;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	text-transform: uppercase;
-	color: clr(contrast);
 	font-weight: $bold;	
 }
 
@@ -39,6 +39,7 @@
 	@each $key, $color in $map {
 		&--#{$key}.theme__colors {
 			background-color: $color;
+			@content;
 		}
 	}
 }
