--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 @import url(url("https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700,900"));
 /* placeholders */
 @media (min-width: 768px) {
-  .nav {
+  .nav__item {
     display: inline-block;
   }
 }
@@ -22,6 +22,19 @@
   color: #fff;
   background-color: #58e1c1;
   border-radius: 5px;
+}
+
+.headline--primary {
+  font-weight: 700;
+  letter-spacing: 0px;
+  font-size: 2em;
+  line-height: 1.125;
+  margin: 0 0 1.25em 0.625em;
+  color: #58e1c1;
+}
+
+.headline--secondary {
+  font-weight: 300;
 }
 
 /* normalize */
@@ -369,10 +382,9 @@ template {
 }
 
 .container {
-  width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding: 20px;
+  padding: 20px 40px;
   font-size: 16px;
   line-height: 1.5;
   font-family: "Nunito", sans-serif;
@@ -381,11 +393,12 @@ template {
 }
 
 .card {
-  width: 90%;
   margin-left: auto;
   margin-right: auto;
+}
+.card p {
+  letter-spacing: 0.6px;
   text-align: left;
-  line-height: 25px;
 }
 
 .link {
@@ -396,26 +409,18 @@ template {
 
 /* typography */
 .headline--secondary {
-  font-weight: 300;
-}
-.headline--primary {
-  font-weight: 700;
-  letter-spacing: -1px;
-  font-size: 2em;
-  line-height: 1.125;
-  margin: 0 0 1.25em 0.625em;
-  color: #58e1c1;
+  text-align: left;
 }
 
 .blockquote {
-  margin: 20px 40px;
-  padding: 0 20px;
+  margin: 1.3333333333em 7%;
+  padding: 0 0 0 5%;
   font-style: italic;
   font-size: 1.5em;
   font-weight: 300;
-  line-height: 33px;
-  letter-spacing: -1px;
-  border-left: 10px solid #58e1c1;
+  line-height: 1.2083333333;
+  letter-spacing: 0px;
+  border-left: 0.4166666667em solid #58e1c1;
   border-radius: 2.5%;
 }
 
@@ -445,7 +450,7 @@ template {
   border-style: none;
   border-radius: 5px;
   font-weight: 700;
-  padding-left: 10px;
+  text-align: left;
 }
 .grid__col--4.theme__colors {
   background-color: #7ee6fd;
@@ -454,7 +459,7 @@ template {
   border-style: none;
   border-radius: 5px;
   font-weight: 700;
-  padding-left: 10px;
+  text-align: left;
 }
 .grid__col--5.theme__colors {
   background-color: #88d9a0;
@@ -463,7 +468,7 @@ template {
   border-style: none;
   border-radius: 5px;
   font-weight: 700;
-  padding-left: 10px;
+  text-align: left;
 }
 .grid__col--6.theme__colors {
   background-color: #4da2bb;
@@ -472,7 +477,7 @@ template {
   border-style: none;
   border-radius: 5px;
   font-weight: 700;
-  padding-left: 10px;
+  text-align: left;
 }
 .grid__col--7.theme__colors {
   background-color: #ec9fa3;
@@ -481,7 +486,7 @@ template {
   border-style: none;
   border-radius: 5px;
   font-weight: 700;
-  padding-left: 10px;
+  text-align: left;
 }
 .grid__col--8.theme__colors {
   background-color: #fd9f85;
@@ -490,7 +495,7 @@ template {
   border-style: none;
   border-radius: 5px;
   font-weight: 700;
-  padding-left: 10px;
+  text-align: left;
 }
 .grid__col--12.theme__colors {
   background-color: #80e8d1;
@@ -499,7 +504,7 @@ template {
   border-style: none;
   border-radius: 5px;
   font-weight: 700;
-  padding-left: 10px;
+  text-align: left;
 }
 @media (min-width: 768px) {
   .grid__col--1 {
@@ -606,8 +611,6 @@ template {
   border-radius: 5px;
   font-weight: 700;
   width: 100%;
-  margin-left: auto;
-  margin-right: auto;
   color: #fff;
   text-transform: uppercase;
   margin: 20px 0;
