--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -2,13 +2,13 @@
 .nav {
 	padding-left: 0;
 	list-style-type: none;
-	@extend %nav-item-horz;
-	&__item {
+	@include e(item) {
+		@extend %nav-item-horz;
 		a {
 			@extend %nav-item-link;
 			text-decoration: none;
 			&:hover {
-				@extend %nav-item-on
+				@extend %nav-item-hover
 			}
 		}
 	}
