--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -1,31 +1,22 @@
 /* typography */
 .headline {
-	&--secondary {
-		font-weight: $light;
+	@include m(primary) {
+		@extend %hdln-prim;
 	}
-	&--primary {
-		font-weight: $bold;
-		letter-spacing: $letter;
-
-		// 32px is the default h1 size value 
-		// font-size is saved here for possible future design alterations
-		font-size: em(32px); 
-		line-height: (36px / 32px);
-
-		// both bottom and left values make use of the function that turns px into em
-		margin: 0  0 em(40px, 32px) em(20px, 32px);	
-		color: clr(important);
+	@include m(secondary) {
+		@extend %hdln-sec;
+		text-align: left;
 	}
 }
 
 .blockquote {
-	margin: 20px 40px;
-	padding: 0 20px;
+	margin: em(32px, 24px) 7%;
+	padding: 0 0 0 5%;
 	font-style: italic;
 	font-size: em(24px);
 	font-weight: $light;
-	line-height: 33px;
+	line-height: (29px / 24px);
 	letter-spacing: $letter;
-	border-left: 10px solid clr(important);
+	border-left: em(10px, 24px) solid clr(important);
 	border-radius: 2.5%;
 }
