--- a/css/styles.css
+++ b/css/styles.css
@@ -384,12 +384,17 @@ template {
 .container {
   margin-left: auto;
   margin-right: auto;
-  padding: 20px 40px;
+  padding: 1.25em 2.5em;
   font-size: 16px;
   line-height: 1.5;
   font-family: "Nunito", sans-serif;
   color: #888;
   text-align: center;
+}
+@media (min-width: 768px) {
+  .container {
+    width: 80%;
+  }
 }
 
 .card {
@@ -441,70 +446,134 @@ template {
 @media (min-width: 768px) {
   .grid__row {
     flex-direction: row;
+    max-width: 1050px;
   }
 }
 .grid__col--3.theme__colors {
   background-color: #deb2ee;
-  display: block;
-  padding: 10px 20px;
-  border-style: none;
+  padding: 15px 30px;
+  border: 0;
   border-radius: 5px;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 0.875em;
   font-weight: 700;
+  display: block;
   text-align: left;
+}
+.grid__col--3.theme__colors:hover {
+  opacity: 0.75;
+}
+.grid__col--3.theme__colors:active {
+  opacity: initial;
 }
 .grid__col--4.theme__colors {
   background-color: #7ee6fd;
-  display: block;
-  padding: 10px 20px;
-  border-style: none;
+  padding: 15px 30px;
+  border: 0;
   border-radius: 5px;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 0.875em;
   font-weight: 700;
+  display: block;
   text-align: left;
+}
+.grid__col--4.theme__colors:hover {
+  opacity: 0.75;
+}
+.grid__col--4.theme__colors:active {
+  opacity: initial;
 }
 .grid__col--5.theme__colors {
   background-color: #88d9a0;
-  display: block;
-  padding: 10px 20px;
-  border-style: none;
+  padding: 15px 30px;
+  border: 0;
   border-radius: 5px;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 0.875em;
   font-weight: 700;
+  display: block;
   text-align: left;
+}
+.grid__col--5.theme__colors:hover {
+  opacity: 0.75;
+}
+.grid__col--5.theme__colors:active {
+  opacity: initial;
 }
 .grid__col--6.theme__colors {
   background-color: #4da2bb;
-  display: block;
-  padding: 10px 20px;
-  border-style: none;
+  padding: 15px 30px;
+  border: 0;
   border-radius: 5px;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 0.875em;
   font-weight: 700;
+  display: block;
   text-align: left;
+}
+.grid__col--6.theme__colors:hover {
+  opacity: 0.75;
+}
+.grid__col--6.theme__colors:active {
+  opacity: initial;
 }
 .grid__col--7.theme__colors {
   background-color: #ec9fa3;
-  display: block;
-  padding: 10px 20px;
-  border-style: none;
+  padding: 15px 30px;
+  border: 0;
   border-radius: 5px;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 0.875em;
   font-weight: 700;
+  display: block;
   text-align: left;
+}
+.grid__col--7.theme__colors:hover {
+  opacity: 0.75;
+}
+.grid__col--7.theme__colors:active {
+  opacity: initial;
 }
 .grid__col--8.theme__colors {
   background-color: #fd9f85;
-  display: block;
-  padding: 10px 20px;
-  border-style: none;
+  padding: 15px 30px;
+  border: 0;
   border-radius: 5px;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 0.875em;
   font-weight: 700;
+  display: block;
   text-align: left;
+}
+.grid__col--8.theme__colors:hover {
+  opacity: 0.75;
+}
+.grid__col--8.theme__colors:active {
+  opacity: initial;
 }
 .grid__col--12.theme__colors {
   background-color: #80e8d1;
-  display: block;
-  padding: 10px 20px;
-  border-style: none;
+  padding: 15px 30px;
+  border: 0;
   border-radius: 5px;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 0.875em;
   font-weight: 700;
+  display: block;
   text-align: left;
+}
+.grid__col--12.theme__colors:hover {
+  opacity: 0.75;
+}
+.grid__col--12.theme__colors:active {
+  opacity: initial;
 }
 @media (min-width: 768px) {
   .grid__col--1 {
@@ -582,6 +651,31 @@ template {
   text-decoration: none;
 }
 /* forms */
+.form__label {
+  display: block;
+  margin-bottom: 0.625em;
+}
+.form__label--hidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+.form__input {
+  width: 100%;
+  font-size: 1.125em;
+  font-weight: 700;
+  color: #888;
+  padding: 0.8333333333em;
+  margin-bottom: 1.1111111111em;
+  border-style: none;
+  border-bottom: 6px solid #58e1c1;
+}
+
 /* images */
 .img--frame {
   width: 100%;
@@ -605,15 +699,22 @@ template {
 }
 
 [class^=btn--] {
-  display: block;
-  padding: 10px 20px;
-  border-style: none;
+  padding: 15px 30px;
+  border: 0;
   border-radius: 5px;
-  font-weight: 700;
-  width: 100%;
   color: #fff;
   text-transform: uppercase;
+  font-size: 0.875em;
+  font-weight: 700;
+  display: block;
+  width: 100%;
   margin: 20px 0;
+}
+[class^=btn--]:hover {
+  opacity: 0.75;
+}
+[class^=btn--]:active {
+  opacity: initial;
 }
 
 /*# sourceMappingURL=styles.css.map */
