--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -11,11 +11,12 @@
         flex-direction: column;
         @include mq(medium) {
             flex-direction: row;
+            max-width: 1050px;
         }
     }
     @include e(col) {
         @include bg-colors($grid-colors) {
-            @include brdr;
+            @include btn;
             text-align: left;
         }
         @for $i from 1 through 12 {
