--- a/scss/utilities/_functions.scss
+++ b/scss/utilities/_functions.scss
@@ -6,7 +6,7 @@
 }
 
 // Font Color Picker
-// Picks the specific color name for the desired element
+// Picks the specific color name for the desired text element
 @function clr($item) {
 	@return map-get($text-colors, $item);
 }
