--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,4 @@
 // Import partial subfolders
-@import 'utilities';
-@import 'base';
-@import 'components';
+@import 'utilities/index';
+@import 'base/index';
+@import 'components/index';
