Tidy up the code

--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -1,21 +1,22 @@
 /* forms */
 // Form
 .form {
-	@include e(label) {
-		@include m(hidden) {
-			@include srt;
+	@include flex($dir: column);
+  	flex: 1;
+	&__label {
+		&--hidden {
+			display: none;
 		}
-		display: block;
 		margin-bottom: em(10px);
 	}
-	@include e(input) {
+	&__input {
 		width: 100%;
 		font-size: em(18px);
 		font-weight: $bold;
-		color: clr(overall);
+		color: clr(color-body);
 		padding: em(15px, 18px);
 		margin-bottom: em(20px, 18px);
 		border-style: none;
-		border-bottom: 6px solid clr(important);
+		border-bottom: 6px solid clr(color-primary);
 	}
 }
