--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,10 +1,16 @@
 /* buttons */
-.btn {
-	@include bg-colors($button-colors);
+// Buttons
+@each $key, $color in $button-colors {
+	.btn--#{$key} {
+		background-color: $color;
+	}
 }
 
 [class^=btn--] {
-	@include btn;
-	width: 100%;
-	margin: 20px 0;
+	@extend %btn;
+	@include mq(medium) {
+		flex: 1;
+		margin-right: em(15px);
+		margin-left: em(15px);
+	}
 }
