--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,16 +1,19 @@
 /* buttons */
 // Buttons
-@each $key, $color in $button-colors {
-	.btn--#{$key} {
-		background-color: $color;
-	}
-}
-
 [class^=btn--] {
 	@extend %btn;
 	@include mq(medium) {
 		flex: 1;
 		margin-right: em(15px);
 		margin-left: em(15px);
+	}
+}
+
+@each $key, $color in $button-colors {
+	.btn--#{$key} {
+		background-color: $color;
+		&:hover {
+			background-color: darken($color, 10%);
+		}
 	}
 }
